# grep

./: CMakeLists.txt  background_thread.cpp  background_thread.h  grep-homework.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
